Added quote section

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         </div>
     </div>
 
-    <div class="infotitle">Some random information</div>
+    <div class="infotitle">Some random sandwiches.</div>
     <div class="info">
         <div class = 'instance'>
             <img class = "inin" src="images/halloumi.jpg" alt="placeholder sarnie">
@@ -47,7 +47,12 @@
             <div class="text">I'm just going to roll with the buns now.</div>
           </div>
     </div>
-    <div class="main"></div>
+    <div class="quote">
+        <div class="quotation">Who are you? I am sorry but I don't know anything about how the sandwich was invented.
+            Are you absolutely sure you have the right person? We've been through this, I sell pens and pen accessories. Please stop bothing my family. 
+            It's 2 in the morning, go away.</div>
+        <div class="author"> - Mr P. J. Sandwich, of Sailsbury</div>
+    </div>
     <div class="footer"></div>
 
 </body>
