Added cta button and footer

--- a/index.html
+++ b/index.html
@@ -53,7 +53,16 @@
             It's 2 in the morning, go away.</div>
         <div class="author"> - Mr P. J. Sandwich, of Sailsbury</div>
     </div>
-    <div class="footer"></div>
-
+   
+    <div class="cta">
+        <div>
+        <div class="author"><strong> Call to butty!</strong></div>
+        <div>Click here to subscribe to sarnie facts!</div>
+        </div>
+        <div>
+            <button>Sign up</button>
+        </div>
+    </div>
+    <div class="footer">Copywrite<pre><span> &copy </span></pre>Graculus Green for The Odin Project 2021</div>
 </body>
 </html>
