--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     </div>
     <div class="quote">
         <div class="quotation">Who are you? I am sorry but I don't know anything about how the sandwich was invented.
-            Are you absolutely sure you have the right person? We've been through this, I sell pens and pen accessories. Please stop bothing my family. 
+            Are you absolutely sure you have the right person? We've been through this, I sell pens and pen accessories. Please stop bothering my family. 
             It's 2 in the morning, go away.</div>
         <div class="author"> - Mr P. J. Sandwich, of Sailsbury</div>
     </div>
@@ -63,6 +63,6 @@
             <button>Sign up</button>
         </div>
     </div>
-    <div class="footer">Copywrite<pre><span> &copy </span></pre>Graculus Green for The Odin Project 2021</div>
+    <div class="footer">Copyright<pre><span> &copy </span></pre>Graculus Green for The Odin Project 2021</div>
 </body>
 </html>
