--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
           </div>
     </div>
     <div class="quote">
-        <div class="quotation">Who are you? I am sorry but I don't know anything about how the sandwich was invented.
+        <div class="quotation">Who are you? What on..? I am sorry but I don't know anything about how the sandwich was invented.
             Are you absolutely sure you have the right person? We've been through this, I sell pens and pen accessories. Please stop bothering my family. 
             It's 2 in the morning, go away.</div>
         <div class="author"> - Mr P. J. Sandwich, of Sailsbury</div>
